--- a/README.Rmd
+++ b/README.Rmd
@@ -4,5 +4,5 @@ author: "Miranda Melen"
 date: "2022-09-23"
 output: html_document
 ---
-this is emma!
-YAY! It worked!
+
+This repository holds datasets, code, and output for Miranda's dissertation.
