--- a/Code/borr_y1_habitat/field_relative_fitness.Rmd
+++ b/Code/borr_y1_habitat/field_relative_fitness.Rmd
@@ -26,6 +26,11 @@ Assumptions for cox models: https://www.theanalysisfactor.com/assumptions-cox-re
 ###Linear mixed-effects models
 Linear Mixed Effects models are used for regression analyses involving dependent data. For a tutorial: https://doi.org/10.1177/2515245920960351
 
+fullmodel <- lmer(log(Biomass) ~   #Response variable: biomass
+          Habitat * Treatment +    #Fixed effects and their interactions(*)
+          (1|Site) + (1|Block),    #Random effect with random intercept only
+          data=mydata)             #Dataframe
+  
 ###Generalized linear mixed models
 
 
@@ -101,18 +106,18 @@ shapiro.test(growth_mydata$Growth.Rate)
 Log transform data (https://www.statology.org/transform-data-in-r/)
 ```{r}
 log_growth_mydata<-log10(growth_mydata$Growth.Rate)
-hist(log_growth_mydata,col='coral2',main='Log Transformed') #Log transformed data, this looks better than the original distribution
+hist(log_growth_mydata,col='steelblue',main='Log Transformed') #Log transformed data, this looks better than the original distribution
 shapiro.test(log_growth_mydata) #Data does not improve with log transformation
 ```
 
 Next I tried a square root transformation, which improved the distribution, but my first model failed the singular fit (see Model 1).
 ```{r}
 sqrt_growth_mydata<-sqrt(growth_mydata$Growth.Rate)
-hist(sqrt_growth_mydata,col='coral2',main='Log Transformed') #Square root transformed data looks better than the original distribution
+hist(sqrt_growth_mydata,col='steelblue',main='Log Transformed') #Square root transformed data looks better than the original distribution
 shapiro.test(sqrt_growth_mydata)
 ```
 
-##Model 1
+##Model 1 - lmer: Modeling Habitat and Treatment with Site and Block as random effects
 ```{r}
 growth_fullmodel1<-lmer(sqrt(Growth.Rate)~Habitat*Treatment+(1|Site)+(1|Block),data=growth_mydata)
 isSingular(growth_fullmodel1,tol=1e-4) #=True
@@ -122,7 +127,7 @@ anova(growth_fullmodel1)
 
 Site as a random effect does not explain any of the variance in the model, therefore let's try Site as a fixed effect to see if it adds to the model.
 
-##Model 2 - Modeling Site as a fixed effect
+##Model 2 - lmer: Modeling Site as a fixed effect and Block as a random effect
 ```{r}
 growth_fullmodel2<-lmer(log(Growth.Rate)~Habitat*Treatment+Site+(1|Block),data=growth_mydata)
 summary(growth_fullmodel2) #As a fixed effect, one of the Sites (OAP) is significant.
@@ -138,60 +143,230 @@ myDHARMagraph2<-simulateResiduals(growth_fullmodel2) #making a graph using DHARM
 plot(myDHARMagraph2) #plotting graph. At this point, you don't want any text or lines to be red. The QQ plots are not looking good for this model. Let's try fitting to a negative binomial distribution.
 ```
 
-##Model 3 - Negative Binomial
+##Model 3 - glmer.nb: Negative Binomial
 ```{r}
-#growth_fullmodel3<-glmer.nb(Growth.Rate~Habitat*Treatment+(1|Site)+(1|Block),data=growth_mydata)
-summary(growth_fullmodel3)
-qqnorm(resid(growth_fullmodel3)) #qqplot
-qqline(resid(growth_fullmodel3)) #add the line
-testDispersion(growth_fullmodel3) #red line should be in the middle of the distribution
-myDHARMagraph3<-simulateResiduals(growth_fullmodel3) #making a graph using DHARMa package, also testing for heteroscedasticity, https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html#heteroscedasticity
-plot(myDHARMagraph3) #plotting graph.The QQ plots are not looking good for this model.
+growth_fullmodel3<-glmer.nb(Growth.Rate~Habitat*Treatment+(1|Site)+(1|Block),data=growth_mydata)
+isSingular(growth_fullmodel3,tol=1e-4)
+#summary(growth_fullmodel3)
+#qqnorm(resid(growth_fullmodel3)) #qqplot
+#qqline(resid(growth_fullmodel3)) #add the line
+#testDispersion(growth_fullmodel3) #red line should be in the middle of the distribution
+#myDHARMagraph3<-simulateResiduals(growth_fullmodel3) #making a graph using DHARMa package, also testing for heteroscedasticity, https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html#heteroscedasticity
+#plot(myDHARMagraph3) #plotting graph.The QQ plots are not looking good for this model.
 ```
-
-
 
 So this model isn't working well either. Let's try building a model and fitting it to a Beta distribution, first without a link function. Check it with DHARMa, and if it doesn't look good, then fit it to a Beta distribution with a logit link function.
 
-Model 4 - Beta distribution####
-#Now I'm using glmm because I'm fitting to other distributions
-fullmodel4<-glmmTMB(Rate~Habitat*Treatment+(1|Site)+(1|Block),family=beta_family(),data=mydata)
-summary(fullmodel4)
-qqnorm(resid(fullmodel4)) #qqplot
-qqline(resid(fullmodel4)) #add the line
-testDispersion(fullmodel4) #red line should be in the middle of the distribution
-myDHARMagraph4<-simulateResiduals(fullmodel4) #making a graph using DHARMa package, also testing for heteroscedasticity, https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html#heteroscedasticity
+##Model 4 - glmm: Beta Distribution
+Now I'm using glmm because I'm fitting to other distributions (beta)
+```{r}
+growth_fullmodel4<-glmmTMB(Growth.Rate~Habitat*Treatment+(1|Site)+(1|Block),family=beta_family(),data=growth_mydata)
+summary(growth_fullmodel4)
+qqnorm(resid(growth_fullmodel4)) #qqplot
+qqline(resid(growth_fullmodel4)) #add the line
+testDispersion(growth_fullmodel4) #red line should be in the middle of the distribution
+myDHARMagraph4<-simulateResiduals(growth_fullmodel4) #making a graph using DHARMa package, also testing for heteroscedasticity, https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html#heteroscedasticity
 plot(myDHARMagraph4) #plotting graph. Looks good, but check the outliers to make sure they are real.
+```
 
-Checking outliers:
-ggplot(data=mydata,aes(x=Habitat,y=Rate))+geom_boxplot()
-max(mydata$Rate[mydata$Habitat== "Off-road"])
-max(mydata$Rate[mydata$Habitat== "Roadside"]) 
-Yes, these outliers make sense, so I don't need to worry about the red stars in the DHARMa plot.
+We should check the outliers in the the DHARMa plot to make sure they make sense.
+```{r}
+growth_outlier_boxplot1<-ggplot(growth_mydata)+
+  geom_boxplot(aes(x=Habitat, y=Growth.Rate), size = 0.5)+
+  theme_classic()+
+  ylim(0,1)+
+  scale_fill_manual(values = c("forestgreen","gray58"))+
+  labs(y="Early Growth Rate", fill = "Habitat", x = "Habitat")
+growth_outlier_boxplot1
 
-Here is the best model
-summary(fullmodel4)
+max(growth_mydata$Growth.Rate[growth_mydata$Habitat== "Away"])
+max(growth_mydata$Growth.Rate[growth_mydata$Habitat== "Roadside"]) #Yes, these outliers make sense, so I don't need to worry about the red stars in the DHARMa plot.
+```
 
-Post-Hoc Test####
-Remove non-significant interaction terms before running the Tukey.
-
-?emmeans, emmeans(model, pairwise ~ treatment)
-fullmodel4.1<-glmmTMB(Rate~Treatment+(1|Site)+(1|Block),family=beta_family(),data=mydata)
-summary(fullmodel4.1)
-emmeans(fullmodel4.1,pairwise~Treatment)
-
-Plotting Successful Model###
-ggplot(data=mydata,aes(x=Treatment,y=Rate))+geom_boxplot() #plot data from log(data)
-ggplot(data=mydata,aes(x=Habitat,y=Rate))+geom_boxplot() #plot data from log(data)
-
-##Historgrams
-##Models
 ###Best Model
-##ggplot
+```{r}
+#growth_fullmodel4<-glmmTMB(Growth.Rate~Habitat*Treatment+(1|Site)+(1|Block),family=beta_family(),data=growth_mydata)
+summary(growth_fullmodel4)
+```
+
+###Post-Hoc Test
+Remove non-significant interaction terms before running the Tukey.
+```{r}
+#?emmeans, emmeans(model, pairwise ~ treatment)
+growth_fullmodel4.1<-glmmTMB(Growth.Rate~Treatment+(1|Site)+(1|Block),family=beta_family(),data=growth_mydata)
+summary(growth_fullmodel4.1)
+emmeans(growth_fullmodel4.1,pairwise~Treatment)
+```
+
+##ggplot - glmm
+```{r}
+#Boxplot with Early Growth Rate by Habitat
+growth_boxplot1<-ggplot(growth_mydata)+
+  geom_boxplot(aes(x=Habitat, y=Growth.Rate), size = 0.5)+
+  theme_classic()+
+  ylim(0,1)+
+  scale_fill_manual(values = c("forestgreen","gray58"))+
+  labs(y="Early Growth Rate", fill = "Habitat", x = "Habitat")
+growth_boxplot1
+
+ggsave(plot = growth_boxplot1, file = "/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/growth_boxplot1.png", width = 20, height = 20, units = "cm", dpi = 800)
+
+#Boxplot with Early Growth Rate by All Treatments
+growth_boxplot2<-ggplot(growth_mydata)+
+  geom_boxplot(aes(x=Treatment, y=Growth.Rate), size = 0.5)+
+  theme_classic()+
+  ylim(0,1)+
+  scale_fill_manual(values = c("forestgreen","gray58"))+
+  labs(y="Early Growth Rate", fill = "Habitat", x = "Treatment")
+growth_boxplot2
+
+ggsave(plot = growth_boxplot2, file = "/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/growth_boxplot2.png", width = 20, height = 20, units = "cm", dpi = 800)
+
+#Boxplot with Early Growth Rate by 2 treatments (Control and Biomass Removal)
+sub_growth_mydata<-subset(growth_mydata,Treatment%in%c('Control','Biomass Removal'))
+
+growth_boxplot3<-ggplot(sub_growth_mydata)+
+  geom_boxplot(aes(x=Treatment, y=Growth.Rate), size = 0.5)+
+  theme_classic()+
+  ylim(0,1)+
+  scale_fill_manual(values = c("forestgreen","gray58"))+
+  labs(y="Early Growth Rate", fill = "Habitat", x = "Treatment")
+growth_boxplot3
+
+ggsave(plot = growth_boxplot3, file = "/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/growth_boxplo3.png", width = 20, height = 20, units = "cm", dpi = 800)
+```
+
+#Reproductive Biomass
+This code uses Biomass data with Habitat (roadside and off-road) and Treatment in a lmer model. ANOVA and Tukey are used on the successful Model 3 with the creation of a box plot as a finished product.
+
+Note: 10 blocks, 5 treatments, 16 populations (CHE-O), 8 sites (random: population pairs; CHE), 2 habitat (fixed effect: roadside and off-road; R or O)
+
+Also Note: Biomass data is a measure of aboveground biomass of all individuals harvested from the site. In some cases this was before they budded, but we harvested the wilted plant in case that information was needed in the future. Here we only want to look at biomass (well, log(Biomass)) for reproductive individuals.
+
+Here we need to subset the data to only look at Biomass when CensorReproduction = 1, so that all Biomass data is for reproductive individuals only.
+```{r}
+reproduction_mydata<-subset(mydata,CensorReproduction%in%c('1')) #Here I am only looking at the Biomass data where the CensorReproduction = 1
+```
 
 
+##Histograms
+```{r}
+hist(reproduction_mydata$Biomass,col='steelblue',main='Original') #Original data is skewed, let's test for normality and consider log transforming the data
+shapiro.test(reproduction_mydata$Biomass)
+```
+
+Log transform data (https://www.statology.org/transform-data-in-r/)
+```{r}
+log_reproduction_mydata<-log10(reproduction_mydata$Biomass)
+hist(log_reproduction_mydata,col='steelblue',main='Log Transformed') #Log transformed data, this looks better than the original distribution
+shapiro.test(log_reproduction_mydata)
+#Log transformed data has a better distribution than the original data so we will use the log transformed data with our models
+```
+
+##Model 1 - lmer: Modeling Habitat and Treatment with Site and Block as random effects
+```{r}
+fullmodel1<-lmer(log(Biomass)~Habitat*Treatment+(1|Site)+(1|Block),data=reproduction_mydata)
+isSingular(fullmodel1,tol=1e-4)
+summary(fullmodel1) #Variance explained by Site = 0.000
+anova(fullmodel1)
+#Site as a random effect does not explain any of the variance in the model, therefore let's try Site as a fixed effect to demonstrate that it doesn't add to the model.
+predict(fullmodel1)
+hist(predict(fullmodel1,type="response"))
+```
+
+##Model 2 - lmer: Modeling Site as a fixed effect
+```{r}
+fullmodel2<-lmer(log(Biomass)~Habitat*Treatment+Site+(1|Block),data=reproduction_mydata)
+summary(fullmodel2)
+anova(fullmodel2)
+#Site as a fixed effect is not significant, therefore it should not be used as a fixed effect in addition to it not being used as a random effect.
+```
+
+##Model 3 - lmer: Site is removed from this model because it explains very little of the variance
+```{r}
+fullmodel3<-lmer(log(Biomass)~Habitat*Treatment+(1|Block),data=reproduction_mydata)
+summary(fullmodel3)
+anova(fullmodel3)
+```
+
+###QQ Plots
+Now we'll look at the QQ plots and the residuals using DHARMa
+```{r}
+qqnorm(resid(fullmodel3)) #qqplot
+qqline(resid(fullmodel3)) #add the line
+testDispersion(fullmodel3) #red line should be in the middle of the distribution
+myDHARMagraph3<-simulateResiduals(fullmodel3) #making a graph using DHARMa package, also testing for heteroscedasticity, https://cran.r-project.org/web/packages/DHARMa/vignettes/DHARMa.html#heteroscedasticity
+plot(myDHARMagraph3) #plotting graph. At this point, you don't want any text or lines to be red.
+```
+
+When we compare the model summaries and Anova of Models 2 & 3, we see that the removal of Site doesn't impact the model. Therefore the more simple Model 3 is a better choice. But let's keep checking...
+
+###Compare AIC Scores
+Now I need to compare the AIC scores for all the models to tell me which is the better model (but it will not say which fits my data better, that is why I did all the DHARMa stuff)
+
+Using aictab to make the comparison of models and table 
+```{r}
+models<-list(fullmodel1,fullmodel2,fullmodel3)
+mod.names<-c('Site.Random','Site.Fixed','No.Site')
+aictab(cand.set=models,modnames=mod.names)
+#The lowest AICc score is listed first and indicates the best fitting model, here, Model 3 (No.Site) where Site is not included. The cut-off for comparing Models is 2 units. The difference between Model 1 (Site.Random) and Model 3 (No.Site) is 2.12. So Model 3 is marginally better than Model 2.
+```
+
+##Other Models Attempted
+Other ideas that were explored to keep Site but resulted in singular error and Site explaining 0.000 of the variance: 
+fullmodel4<-lmer(log(Biomass)~ Treatment + (1|Site) + (1|Block), data = mydata)
+summary(fullmodel4)
+fullmodel5<-lmer(log(Biomass)~ Treatment + Habitat + (1|Site) + (1|Block), data = mydata)
+summary(fullmodel5)
+
+###Best Model
+```{r}
+#fullmodel3<-lmer(log(Biomass)~Habitat*Treatment+(1|Block),data=reproduction_mydata)
+summary(fullmodel3)
+```
+
+###Post-Hoc Test
+You should remove non-significant interaction terms before running a post-hoc test. It is difficult to judge the main effects (Habitat and Site) when you also have the interaction term present, so when it is not significant, fit a new model without it.
+```{r}
+fullmodel3.1<-lmer(log(Biomass)~Treatment+(1|Block),data=reproduction_mydata)
+summary(fullmodel3.1)
+anova(fullmodel3.1)
+qqnorm(resid(fullmodel3.1)) #qqplot
+qqline(resid(fullmodel3.1)) #add the line
+testDispersion(fullmodel3.1) #red line should be in the middle of the distribution
+myDHARMagraph3.1<-simulateResiduals(fullmodel3.1) #testing for heteroscedasticity
+plot(myDHARMagraph3.1) #plotting graph
+```
+
+```{r}
+fullmodel3.2<-lmer(log(Biomass)~Treatment+(1|Block)+(1|Population),data=mydata)
+summary(fullmodel3.2)
+anova(fullmodel3.2)
+qqnorm(resid(fullmodel3.2)) #qqplot
+qqline(resid(fullmodel3.2)) #add the line
+testDispersion(fullmodel3.2) #red line should be in the middle of the distribution
+myDHARMagraph3.2<-simulateResiduals(fullmodel3.2) #testing for heteroscedasticity
+plot(myDHARMagraph3.2) #plotting graph
+```
+
+Let's use emmeans for our Best Model (fullmodel3) and the two off-shoots.
+```{r}
+#?emmeans, emmeans(model, pairwise ~ treatment)
+emmeans(fullmodel3,pairwise~Treatment)
+emmeans(fullmodel3.1,pairwise~Treatment)
+emmeans(fullmodel3.2,pairwise~Treatment)
+#These models result in similar Tukey outcomes
+```
+
+##ggplot - lmer
+```{r}
+ggplot(data=reproduction_mydata,aes(x=Treatment,y=log(Biomass)))+geom_boxplot() #plot data from log(data)
+ggplot(data=reproduction_mydata,aes(x=Habitat,y=log(Biomass)))+geom_boxplot() #plot data from log(data)
+```
 
 #Survival Analysis
+This code uses NumDaysAlive data with Habitat (roadside and off-road) and Treatment in a Cox proportional hazards model to assess survival. Information here: https://cran.r-project.org/web/packages/coxme/vignettes/coxme.pdf. "Surv" creates a survival object to combine the days column (NumDaysAlive) and the reproductive censor column (ReproductionCensor) to be used as a response variable in a model formula. The model follows the same syntax as linear models (lm, lmer, etc). Fixed effects: "var1 * var2" will give you the interaction term and the individual variables: so "var1 + var2 + var1:var2". To add random effects, type "+ (1|random effect)". 
+
 ##Histograms
 ```{r}
 #Number of Days Alive - All data
@@ -279,7 +454,7 @@ summary(cox_fullmodel3)
 anova(cox_fullmodel3,cox_fullmodel4) #Significant
 AIC(cox_fullmodel3,cox_fullmodel4) #Looks like fullmodel4 is the better model because the AIC score is within 2 points of each other, therefore the models are assessed the same and you should take the simpler model. But this is for another manuscript, probably.
 ```
-##ggplot - Survival Curves
+##autoplot - Survival Curves
 Plot by habitat
 ```{r}
 cox_model_graph1<-survfit(Surv(NumDaysAlive,CensorReproduction)~Habitat,data=mydata)
@@ -299,9 +474,9 @@ summary(glht(cox_fullmodel4, mcp(Treatment="Tukey")))
 Plot by 2 treatments (Control and Biomass Removal), and adding in Habitat
 ```{r}
 cox_sub_mydata<-subset(mydata,Treatment%in%c('Control','Biomass Removal'))
-cox_model_graph3<-survfit(Surv(NumDaysAlive,CensorReproduction)~Treatment,data=sub_mydata)
+cox_model_graph3<-survfit(Surv(NumDaysAlive,CensorReproduction)~Treatment,data=cox_sub_mydata)
 autoplot(cox_model_graph3)+labs(x="\n Survival Time (Days)",y="Survival Probabilities\n",title="Survival Times Of \n Roadside and Off-road Populations\n")+theme(plot.title=element_text(hjust=0.5),axis.title.x=element_text(face="bold",color="Black",size = 12),axis.title.y=element_text(face="bold",color="Black",size=12),legend.title=element_text(face="bold",size=10))
 
-cox_model_graph3<-survfit(Surv(NumDaysAlive,CensorReproduction)~Treatment+Habitat,data=sub_mydata)
+cox_model_graph3<-survfit(Surv(NumDaysAlive,CensorReproduction)~Treatment+Habitat,data=cox_sub_mydata)
 autoplot(cox_model_graph3)+labs(x="\n Survival Time (Days)",y="Survival Probabilities\n",title="Survival Times Of \n Roadside and Off-road Populations\n")+theme(plot.title=element_text(hjust=0.5),axis.title.x=element_text(face="bold",color="Black",size = 12),axis.title.y=element_text(face="bold",color="Black",size=12),legend.title=element_text(face="bold",size=10))
 ```
