more coding! now with interactions!

--- a/Code/borr_y1_habitat/field_relative_fitness.Rmd
+++ b/Code/borr_y1_habitat/field_relative_fitness.Rmd
@@ -32,7 +32,7 @@ fullmodel <- lmer(log(Biomass) ~   #Response variable: biomass
           data=mydata)             #Dataframe
   
 ###Generalized linear mixed models
-
+under construction
 
 
 #Libraries
