--- a/Code/borr_y1_habitat/greenhouse_competition.Rmd
+++ b/Code/borr_y1_habitat/greenhouse_competition.Rmd
@@ -23,11 +23,25 @@ We tested for a difference between roadside and adjacent vegetation habitat type
 #Libraries
 ```{r}
 #install.packages("ggplot2")
-#install.library("tidyverse")
-#install.library("dplyr")
+#install.packages("tidyverse")
+#install.packages("dplyr")
+#install.packages("tidyr")
+#install.packages("RColorBrewer")
+#install.packages("data.table")
+#install.packages("emmeans")
+#install.packages("lme4")
+#install.packages("patchwork")
+#install.packages("Sleuth2")
 library(ggplot2)
 library(tidyverse)
 library(dplyr)
+library(tidyr)
+library(RColorBrewer)
+library(data.table)
+library(emmeans)
+library(lme4)
+library(patchwork)
+library(Sleuth2)
 ```
 
 #Load Data
@@ -93,6 +107,123 @@ competition2_gg<-ggplot(log_mydata)+
 competition2_gg
 ggsave(plot = competition2_gg, file = "/Users/Miranda/Documents/Education/UC Santa Cruz/Dittrichia/Dittrichia_Analysis/figures/competition2_gg.png", width = 20, height = 25, units = "cm", dpi = 800)
 ```
+##Interaction Plot
+Note: 10 blocks, 5 treatments, 16 populations (CHE-O), 8 sites (random: population pairs; CHE), 2 habitat (fixed effect: roadside and off-road; R or O)
+
+All data combined.
+```{r}
+mydata_fit<-lm(log_mydata$log_Dittrichia~Soil*Habitat,data=log_mydata)
+x<-c("Soil","Habitat")
+mydata_fit_df<-data.table(summary(emmeans(mydata_fit,specs=x)))
+pd<-position_dodge(.2)
+trueSE<-sd(log_mydata1$log_Dittrchia)/sqrt(length(log_mydata$log_Dittrichia))
+mydata_Anova<-anova(mydata_fit)
+mydata_Anova
+
+comp_int_all_gg<-ggplot(
+  data=mydata_fit_df,
+                aes(
+                  x=factor(Soil),
+                  y=emmean,
+                  shape=Habitat,
+                  group=Habitat)
+    )+
+  ylab("log(Biomass)")+
+  xlab("Soil")+
+  scale_y_continuous(limits=c(2.4,5.5),
+                     breaks=c(2.5,3,3.5,4,4.5,5,5.5)
+                     )+
+  theme_bw()+
+  theme(panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        axis.line=element_line(colour="black")
+        )+
+  geom_line(
+    size=1,
+    position=pd,
+    color=c("orange","orange","purple","purple")
+            )+
+  geom_point(
+    size=5,
+    position=pd,
+    color=c("orange","orange","purple","purple")
+  )+
+  geom_errorbar(
+    color=c("orange","orange","purple","purple"),
+    width=0.2,
+    position=pd,
+    aes(
+      ymin=(emmean-SE),
+      ymax=(emmean+SE)
+      ))
+
+comp_int_all_gg
+
+#Assign legend to have the correct colors
+```
+Plot by population.
+```{r}
+mydata_fit<-lm(log_mydata$log_Dittrichia~Soil*Habitat,data=log_mydata)
+x <- c("Soil","Habitat")
+mydata_fit_df <- data.table(summary(emmeans(mydata_fit,specs=x)))
+#For all 16 iterations, summarize the data here but without emmeans... use log_mydata
+#log_mydata%>%group_by(Habitat,Soil,Population)%>%summarise(Mean=mean(log_biomass),SD=sd(log_biomass),N=length(log_biomass))%>%mutate(SE=SD/sqrt(n))
+pd<-position_dodge(.2)
+trueSE <- sd(log_mydata1$log_Dittrchia)/sqrt(length(log_mydata$log_Dittrichia))
+mydata_Anova<-anova(mydata_fit)
+mydata_Anova
+
+comp_int_site_gg <- ggplot(
+  data=mydata_fit_df,
+                aes(
+                  x=factor(Soil),
+                  y=emmean,
+                  shape=Habitat,
+                  group=Habitat)
+    )+
+  ylab("log(Biomass)")+
+  xlab("Soil")+
+  scale_y_continuous(limits=c(2.4,5.5),
+                     breaks=c(2.5,3,3.5,4,4.5,5,5.5)
+                     )+
+  theme_bw()+
+  theme(panel.border=element_blank(),
+        panel.grid.major=element_blank(),
+        panel.grid.minor=element_blank(),
+        axis.line=element_line(colour="black")
+        )+
+  geom_line(
+    size=1,
+    position=pd,
+    color=c("orange","orange","purple","purple")
+            )+
+  geom_point(
+    size=5,
+    position=pd,
+    color=c("orange","orange","purple","purple")
+  )+
+  geom_errorbar(
+    color=c("orange","orange","purple","purple"),
+    width=0.2,
+    position=pd,
+    aes(
+      ymin=(emmean-SE),
+      ymax=(emmean+SE)
+      ))
+
+comp_int_site_gg
+```
+
+
+
+
+
+
+
+
+
+
 
 ## Biomass Scatterplot
 ```{r}
